# 2D-game

./: .gitignore  Animation.h  Bullet.cpp  Bullet.h  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Character.h  Collider.h  CollisionHandler.cpp  CollisionHandler.h  Enemy.cpp  Enemy.h  FontsManager.cpp  FontsManager.h  Game.cpp  Game.h  GameObject.h  IOobject.cpp  IOobject.h  Layer.h  Map.h  Nickname.cpp  Nickname.h  ObjectFactory.cpp  ObjectFactory.h  Parser_music.cpp  Pointer.h  ProgressBar.cpp  ProgressBar.h  README.md  RigdBody.cpp  RigdBody.h  SeqAnim.cpp  SeqAnim.h  SpriteAnim.cpp  SpriteAnim.h  TextureManager.cpp  TextureManager.h  (+27 more)
